--- a/index_backup2.html
+++ b/index_backup2.html
@@ -1175,15 +1175,33 @@
       <td>Row 9, Cell 4</td>
       <td>Row 9, Cell 5</td>
       <td>Row 9, Cell 6</td>
-      <td>Row 9, Cell 7</td>
-      <td>Row 9, Cell 8</td>
+       <td id="uranium" class="solid" tabindex="0">
+            <ul>
+             <li data-atomicnumber="92"><span class="bigfont1" aria-label="atomic number 92">92</span></li>
+             <li data-symbol="U" aria-label="atomic symbol U" class="bigfont2">U<span class="letter-tight">&nbsp;</span></li>
+             <li data-element="uranium"><span class="bigfont1" aria-label="element">Uranium</span></li>
+             <li data-weight="238.03"><span class="bigfont1" aria-label="standard atomic weight 238 . 0 3">238.03</span></li>
+             <li data-groundstate="uranium"><span class="bigfont1" aria-label="ground [Rn]5f 3 6d 7s 2">[Rn]5f<sup>3</sup>6d7s<sup>2</sup></span></li>
+             <li data-ev="6.1941"><span class="bigfont1" aria-label="ionization energy 6 . 1 9 4 1">6.1941</span></li> 
+          </ul>
+      </td>
+      <td id="neptunium" class="artificial" tabindex="0">
+            <ul>
+             <li data-atomicnumber="93"><span class="bigfont1" aria-label="atomic number 93">93</span></li>
+             <li data-symbol="N p" aria-label="atomic symbol N p" class="bigfont2">N<span class="letter-tight">p</span></li>
+             <li data-element="neptunium"><span class="bigfont1" aria-label="element">Neptunium</span></li>
+             <li data-weight="237"><span class="bigfont1" aria-label="standard atomic weight ( 237 )">(237)</span></li>
+             <li data-groundstate="neptunium"><span class="bigfont1" aria-label="ground [Rn]5f 4 6d 7s 2">[Rn]5f<sup>4</sup>6d7s<sup>2</sup></span></li>
+             <li data-ev="6.2655"><span class="bigfont1" aria-label="ionization energy 6 . 2 6 5 5">6.2655</span></li> 
+          </ul>
+      </td>
       <td id="plutonium" class="artificial" tabindex="0">
             <ul>
              <li data-atomicnumber="94"><span class="bigfont1" aria-label="atomic number 94">94</span></li>
              <li data-symbol="P u" aria-label="atomic symbol P u" class="bigfont2">P<span class="letter-tight">u</span></li>
              <li data-element="plutonium"><span class="bigfont1" aria-label="element">Plutonium</span></li>
              <li data-weight="244"><span class="bigfont1" aria-label="standard atomic weight ( 244 )">(244)</span></li>
-             <li data-groundstate="plutonium"><span class="bigfont1" aria-label="ground [Rn]5f 8 s2">[Rn]5f<sup>8</sup>7s<sup>2</sup></span></li>
+             <li data-groundstate="plutonium"><span class="bigfont1" aria-label="ground [Rn]5f 6 s2">[Rn]5f<sup>6</sup>7s<sup>2</sup></span></li>
              <li data-ev="6.0258"><span class="bigfont1" aria-label="ionization energy 6 . 0 2 5 8">6.0258</span></li> 
           </ul>
       </td>
@@ -1278,7 +1296,6 @@
           </ul>
        </td>
      </tr>
-
   </tbody>
 </table>
 </div>
