--- a/index.html
+++ b/index.html
@@ -1174,8 +1174,17 @@
       <td class="hidden">Row 9, Cell 3</td>
       <td>Row 9, Cell 4</td>
       <td>Row 9, Cell 5</td>
-      <td>Row 9, Cell 6</td>
-       <td id="uranium" class="solid" tabindex="0">
+      <td id="protactinium" class="solids" tabindex="0">
+            <ul>
+             <li data-atomicnumber="91"><span class="bigfont1" aria-label="atomic number 91">91</span></li>
+             <li data-symbol="U" aria-label="atomic symbol U" class="bigfont2">U<span class="letter-tight">&nbsp;</span></li>
+             <li data-element="protactinium"><span class="bigfont1" aria-label="element">Protactinium</span></li>
+             <li data-weight="238.03"><span class="bigfont1" aria-label="standard atomic weight 238 . 0 3">238.03</span></li>
+             <li data-groundstate="protactinium"><span class="bigfont1" aria-label="ground [Rn]5f 3 6d 7s 2">[Rn]5f<sup>3</sup>6d7s<sup>2</sup></span></li>
+             <li data-ev="6.1941"><span class="bigfont1" aria-label="ionization energy 6 . 1 9 4 1">6.1941</span></li> 
+          </ul>
+      </td>
+      <td id="uranium" class="solids" tabindex="0">
             <ul>
              <li data-atomicnumber="92"><span class="bigfont1" aria-label="atomic number 92">92</span></li>
              <li data-symbol="U" aria-label="atomic symbol U" class="bigfont2">U<span class="letter-tight">&nbsp;</span></li>
