--- a/index.html
+++ b/index.html
@@ -1177,11 +1177,11 @@
       <td id="protactinium" class="solids" tabindex="0">
             <ul>
              <li data-atomicnumber="91"><span class="bigfont1" aria-label="atomic number 91">91</span></li>
-             <li data-symbol="U" aria-label="atomic symbol U" class="bigfont2">U<span class="letter-tight">&nbsp;</span></li>
+             <li data-symbol="P a" aria-label="atomic symbol P a" class="bigfont2">P<span class="letter-tight">a</span></li>
              <li data-element="protactinium"><span class="bigfont1" aria-label="element">Protactinium</span></li>
-             <li data-weight="238.03"><span class="bigfont1" aria-label="standard atomic weight 238 . 0 3">238.03</span></li>
-             <li data-groundstate="protactinium"><span class="bigfont1" aria-label="ground [Rn]5f 3 6d 7s 2">[Rn]5f<sup>3</sup>6d7s<sup>2</sup></span></li>
-             <li data-ev="6.1941"><span class="bigfont1" aria-label="ionization energy 6 . 1 9 4 1">6.1941</span></li> 
+             <li data-weight="231.04"><span class="bigfont1" aria-label="standard atomic weight 231 . 0 4">231.04</span></li>
+             <li data-groundstate="protactinium"><span class="bigfont1" aria-label="ground [Rn]5f 2 6d 7s 2">[Rn]5f<sup>2</sup>6d7s<sup>2</sup></span></li>
+             <li data-ev="5.89"><span class="bigfont1" aria-label="ionization energy 5 . 8 9">5.89</span></li> 
           </ul>
       </td>
       <td id="uranium" class="solids" tabindex="0">
