--- a/index_backup1.html
+++ b/index_backup1.html
@@ -1174,8 +1174,26 @@
       <td class="hidden">Row 9, Cell 3</td>
       <td>Row 9, Cell 4</td>
       <td>Row 9, Cell 5</td>
-      <td>Row 9, Cell 6</td>
-      <td>Row 9, Cell 7</td>
+      <td id="protactinium" class="solids" tabindex="0">
+            <ul>
+             <li data-atomicnumber="91"><span class="bigfont1" aria-label="atomic number 91">91</span></li>
+             <li data-symbol="P a" aria-label="atomic symbol P a" class="bigfont2">P<span class="letter-tight">a</span></li>
+             <li data-element="protactinium"><span class="bigfont1" aria-label="element">Protactinium</span></li>
+             <li data-weight="231.04"><span class="bigfont1" aria-label="standard atomic weight 231 . 0 4">231.04</span></li>
+             <li data-groundstate="protactinium"><span class="bigfont1" aria-label="ground [Rn]5f 2 6d 7s 2">[Rn]5f<sup>2</sup>6d7s<sup>2</sup></span></li>
+             <li data-ev="5.89"><span class="bigfont1" aria-label="ionization energy 5 . 8 9">5.89</span></li> 
+          </ul>
+      </td>
+      <td id="uranium" class="solids" tabindex="0">
+            <ul>
+             <li data-atomicnumber="92"><span class="bigfont1" aria-label="atomic number 92">92</span></li>
+             <li data-symbol="U" aria-label="atomic symbol U" class="bigfont2">U<span class="letter-tight">&nbsp;</span></li>
+             <li data-element="uranium"><span class="bigfont1" aria-label="element">Uranium</span></li>
+             <li data-weight="238.03"><span class="bigfont1" aria-label="standard atomic weight 238 . 0 3">238.03</span></li>
+             <li data-groundstate="uranium"><span class="bigfont1" aria-label="ground [Rn]5f 3 6d 7s 2">[Rn]5f<sup>3</sup>6d7s<sup>2</sup></span></li>
+             <li data-ev="6.1941"><span class="bigfont1" aria-label="ionization energy 6 . 1 9 4 1">6.1941</span></li> 
+          </ul>
+      </td>
       <td id="neptunium" class="artificial" tabindex="0">
             <ul>
              <li data-atomicnumber="93"><span class="bigfont1" aria-label="atomic number 93">93</span></li>
@@ -1183,7 +1201,7 @@
              <li data-element="neptunium"><span class="bigfont1" aria-label="element">Neptunium</span></li>
              <li data-weight="237"><span class="bigfont1" aria-label="standard atomic weight ( 237 )">(237)</span></li>
              <li data-groundstate="neptunium"><span class="bigfont1" aria-label="ground [Rn]5f 4 6d 7s 2">[Rn]5f<sup>4</sup>6d7s<sup>2</sup></span></li>
-             <li data-ev="6 . 2 6 5 5"><span class="bigfont1" aria-label="ionization energy 6 . 2 6 5 5">6.2655</span></li> 
+             <li data-ev="6.2655"><span class="bigfont1" aria-label="ionization energy 6 . 2 6 5 5">6.2655</span></li> 
           </ul>
       </td>
       <td id="plutonium" class="artificial" tabindex="0">
@@ -1287,7 +1305,6 @@
           </ul>
        </td>
      </tr>
-
   </tbody>
 </table>
 </div>
