--- a/index_backup2.html
+++ b/index_backup2.html
@@ -1174,8 +1174,17 @@
       <td class="hidden">Row 9, Cell 3</td>
       <td>Row 9, Cell 4</td>
       <td>Row 9, Cell 5</td>
-      <td>Row 9, Cell 6</td>
-       <td id="uranium" class="solid" tabindex="0">
+      <td id="protactinium" class="solids" tabindex="0">
+            <ul>
+             <li data-atomicnumber="91"><span class="bigfont1" aria-label="atomic number 91">91</span></li>
+             <li data-symbol="P a" aria-label="atomic symbol P a" class="bigfont2">P<span class="letter-tight">a</span></li>
+             <li data-element="protactinium"><span class="bigfont1" aria-label="element">Protactinium</span></li>
+             <li data-weight="231.04"><span class="bigfont1" aria-label="standard atomic weight 231 . 0 4">231.04</span></li>
+             <li data-groundstate="protactinium"><span class="bigfont1" aria-label="ground [Rn]5f 2 6d 7s 2">[Rn]5f<sup>2</sup>6d7s<sup>2</sup></span></li>
+             <li data-ev="5.89"><span class="bigfont1" aria-label="ionization energy 5 . 8 9">5.89</span></li> 
+          </ul>
+      </td>
+      <td id="uranium" class="solids" tabindex="0">
             <ul>
              <li data-atomicnumber="92"><span class="bigfont1" aria-label="atomic number 92">92</span></li>
              <li data-symbol="U" aria-label="atomic symbol U" class="bigfont2">U<span class="letter-tight">&nbsp;</span></li>
@@ -1300,8 +1309,8 @@
 </table>
 </div>
     
-  </main>
-  <footer>
+ </main>
+ <footer>
   <div class="left100">
      <p tabindex="0">This page last modified or reviewed</p>
         Content: 27 January 2020<br />
