--- a/index_backup1.html
+++ b/index_backup1.html
@@ -1173,7 +1173,16 @@
       <td class="hidden">Row 9, Cell 2</td>
       <td class="hidden">Row 9, Cell 3</td>
       <td>Row 9, Cell 4</td>
-      <td>Row 9, Cell 5</td>
+            <td id="thorium" class="solids" tabindex="0">
+            <ul>
+             <li data-atomicnumber="90"><span class="bigfont1" aria-label="atomic number 90">90</span></li>
+             <li data-symbol="T h" aria-label="atomic symbol T h" class="bigfont2">T<span class="letter-tight">h</span></li>
+             <li data-element="thorium"><span class="bigfont1" aria-label="element">Thorium</span></li>
+             <li data-weight="232.04"><span class="bigfont1" aria-label="standard atomic weight 232 . 0 4">232.04</span></li>
+             <li data-groundstate="thorium"><span class="bigfont1" aria-label="ground [Rn] 6d 7s 2">[Rn]<sup></sup>6d7s<sup>2</sup></span></li>
+             <li data-ev="6.3067"><span class="bigfont1" aria-label="ionization energy 6 . 3 0 6 7">6.3067</span></li> 
+          </ul>
+      </td>
       <td id="protactinium" class="solids" tabindex="0">
             <ul>
              <li data-atomicnumber="91"><span class="bigfont1" aria-label="atomic number 91">91</span></li>
@@ -1306,11 +1315,12 @@
        </td>
      </tr>
   </tbody>
+   
 </table>
 </div>
     
-  </main>
-  <footer>
+ </main>
+ <footer>
   <div class="left100">
      <p tabindex="0">This page last modified or reviewed</p>
         Content: 27 January 2020<br />
