--- a/index.html
+++ b/index.html
@@ -1171,17 +1171,7 @@
     <tr>
       <td class="hidden">Row 9, Cell 1</td>
       <td class="hidden">Row 9, Cell 2</td>
-      <td>Row 9, Cell 4</td>
-            <td id="actinium" class="solids" tabindex="0">
-            <ul>
-             <li data-atomicnumber="89"><span class="bigfont1" aria-label="atomic number 89">89</span></li>
-             <li data-symbol="A c" aria-label="atomic symbol A c" class="bigfont2">A<span class="letter-tight">c</span></li>
-             <li data-element="actinium"><span class="bigfont1" aria-label="element">Actinium</span></li>
-             <li data-weight="232.04"><span class="bigfont1" aria-label="standard atomic weight 232 . 0 4">232.04</span></li>
-             <li data-groundstate="actinium"><span class="bigfont1" aria-label="ground [Rn] 6d 7s 2">[Rn]<sup></sup>6d7s<sup>2</sup></span></li>
-             <li data-ev="5.3802"><span class="bigfont1" aria-label="ionization energy 5 . 3 8 0 2">5.3802</span></li> 
-          </ul>
-      </td>
+      <td class="hidden">Row 9, Cell 3</td>
       <td>Row 9, Cell 4</td>
             <td id="thorium" class="solids" tabindex="0">
             <ul>
@@ -1329,7 +1319,7 @@
 </table>
 </div>
     
-</main>
+ </main>
  <footer>
   <div class="left100">
      <p tabindex="0">This page last modified or reviewed</p>
