--- a/index.html
+++ b/index.html
@@ -1175,11 +1175,11 @@
       <td id="actinium" class="solids" tabindex="0">
             <ul>
              <li data-atomicnumber="90"><span class="bigfont1" aria-label="atomic number 90">90</span></li>
-             <li data-symbol="T h" aria-label="atomic symbol T h" class="bigfont2">T<span class="letter-tight">h</span></li>
+             <li data-symbol="A c" aria-label="atomic symbol A c" class="bigfont2">A<span class="letter-tight">c</span></li>
              <li data-element="actinium"><span class="bigfont1" aria-label="element">Actinium</span></li>
              <li data-weight="(227)"><span class="bigfont1" aria-label="standard atomic weight ( 227 )">(227)</span></li>
-             <li data-groundstate="actinium"><span class="bigfont1" aria-label="ground [Rn] 6d  2 7s 2">[Rn]6d<sup>2</sup>7s<sup>2</sup></span></li>
-             <li data-ev="6.3067"><span class="bigfont1" aria-label="ionization energy 6 . 3 0 6 7">6.3067</span></li> 
+             <li data-groundstate="actinium"><span class="bigfont1" aria-label="ground [Rn] 6d 7s 2">[Rn]6d<sup></sup>7s<sup>2</sup></span></li>
+             <li data-ev="5.3802"><span class="bigfont1" aria-label="ionization energy 5 . 3 8 0 2">5.3802</span></li> 
           </ul>
       </td>
       <td id="thorium" class="solids" tabindex="0">
