--- a/index_ko.html
+++ b/index_ko.html
@@ -1172,13 +1172,76 @@
       <td class="hidden">Row 9, Cell 1</td>
       <td class="hidden">Row 9, Cell 2</td>
       <td class="hidden">Row 9, Cell 3</td>
-      <td>Row 9, Cell 4</td>
-      <td>Row 9, Cell 5</td>
-      <td>Row 9, Cell 6</td>
-      <td>Row 9, Cell 7</td>
-      <td>Row 9, Cell 8</td>
-      <td>Row 9, Cell 9</td>
-      <td>Row 9, Cell 10</td>
+      <td id="actinium" class="solids" tabindex="0">
+            <ul>
+             <li data-atomicnumber="90"><span class="bigfont1" aria-label="atomic number 90">90</span></li>
+             <li data-symbol="A c" aria-label="atomic symbol A c" class="bigfont2">A<span class="letter-tight">c</span></li>
+             <li data-element="actinium"><span class="bigfont1" aria-label="element">Actinium</span></li>
+             <li data-weight="(227)"><span class="bigfont1" aria-label="standard atomic weight ( 227 )">(227)</span></li>
+             <li data-groundstate="actinium"><span class="bigfont1" aria-label="ground [Rn] 6d 7s 2">[Rn]6d<sup></sup>7s<sup>2</sup></span></li>
+             <li data-ev="5.3802"><span class="bigfont1" aria-label="ionization energy 5 . 3 8 0 2">5.3802</span></li> 
+          </ul>
+      </td>
+      <td id="thorium" class="solids" tabindex="0">
+            <ul>
+             <li data-atomicnumber="90"><span class="bigfont1" aria-label="atomic number 90">90</span></li>
+             <li data-symbol="T h" aria-label="atomic symbol T h" class="bigfont2">T<span class="letter-tight">h</span></li>
+             <li data-element="thorium"><span class="bigfont1" aria-label="element">Thorium</span></li>
+             <li data-weight="232.04"><span class="bigfont1" aria-label="standard atomic weight 232 . 0 4">232.04</span></li>
+             <li data-groundstate="thorium"><span class="bigfont1" aria-label="ground [Rn] 6d  2 7s 2">[Rn]6d<sup>2</sup>7s<sup>2</sup></span></li>
+             <li data-ev="6.3067"><span class="bigfont1" aria-label="ionization energy 6 . 3 0 6 7">6.3067</span></li> 
+          </ul>
+      </td>
+      <td id="protactinium" class="solids" tabindex="0">
+            <ul>
+             <li data-atomicnumber="91"><span class="bigfont1" aria-label="atomic number 91">91</span></li>
+             <li data-symbol="P a" aria-label="atomic symbol P a" class="bigfont2">P<span class="letter-tight">a</span></li>
+             <li data-element="protactinium"><span class="bigfont1" aria-label="element">Protactinium</span></li>
+             <li data-weight="231.04"><span class="bigfont1" aria-label="standard atomic weight 231 . 0 4">231.04</span></li>
+             <li data-groundstate="protactinium"><span class="bigfont1" aria-label="ground [Rn]5f 2 6d 7s 2">[Rn]5f<sup>2</sup>6d7s<sup>2</sup></span></li>
+             <li data-ev="5.89"><span class="bigfont1" aria-label="ionization energy 5 . 8 9">5.89</span></li> 
+          </ul>
+      </td>
+      <td id="uranium" class="solids" tabindex="0">
+            <ul>
+             <li data-atomicnumber="92"><span class="bigfont1" aria-label="atomic number 92">92</span></li>
+             <li data-symbol="U" aria-label="atomic symbol U" class="bigfont2">U<span class="letter-tight">&nbsp;</span></li>
+             <li data-element="uranium"><span class="bigfont1" aria-label="element">Uranium</span></li>
+             <li data-weight="238.03"><span class="bigfont1" aria-label="standard atomic weight 238 . 0 3">238.03</span></li>
+             <li data-groundstate="uranium"><span class="bigfont1" aria-label="ground [Rn]5f 3 6d 7s 2">[Rn]5f<sup>3</sup>6d7s<sup>2</sup></span></li>
+             <li data-ev="6.1941"><span class="bigfont1" aria-label="ionization energy 6 . 1 9 4 1">6.1941</span></li> 
+          </ul>
+      </td>
+      <td id="neptunium" class="artificial" tabindex="0">
+            <ul>
+             <li data-atomicnumber="93"><span class="bigfont1" aria-label="atomic number 93">93</span></li>
+             <li data-symbol="N p" aria-label="atomic symbol N p" class="bigfont2">N<span class="letter-tight">p</span></li>
+             <li data-element="neptunium"><span class="bigfont1" aria-label="element">Neptunium</span></li>
+             <li data-weight="237"><span class="bigfont1" aria-label="standard atomic weight ( 237 )">(237)</span></li>
+             <li data-groundstate="neptunium"><span class="bigfont1" aria-label="ground [Rn]5f 4 6d 7s 2">[Rn]5f<sup>4</sup>6d7s<sup>2</sup></span></li>
+             <li data-ev="6.2655"><span class="bigfont1" aria-label="ionization energy 6 . 2 6 5 5">6.2655</span></li> 
+          </ul>
+      </td>
+      <td id="plutonium" class="artificial" tabindex="0">
+            <ul>
+             <li data-atomicnumber="94"><span class="bigfont1" aria-label="atomic number 94">94</span></li>
+             <li data-symbol="P u" aria-label="atomic symbol P u" class="bigfont2">P<span class="letter-tight">u</span></li>
+             <li data-element="plutonium"><span class="bigfont1" aria-label="element">Plutonium</span></li>
+             <li data-weight="244"><span class="bigfont1" aria-label="standard atomic weight ( 244 )">(244)</span></li>
+             <li data-groundstate="plutonium"><span class="bigfont1" aria-label="ground [Rn]5f 6 s2">[Rn]5f<sup>6</sup>7s<sup>2</sup></span></li>
+             <li data-ev="6.0258"><span class="bigfont1" aria-label="ionization energy 6 . 0 2 5 8">6.0258</span></li> 
+          </ul>
+      </td>
+      <td id="americium" class="artificial" tabindex="0">
+            <ul>
+             <li data-atomicnumber="95"><span class="bigfont1" aria-label="atomic number 95">95</span></li>
+             <li data-symbol="A m" aria-label="atomic symbol A m" class="bigfont2">A<span class="letter-tight">m</span></li>
+             <li data-element="americium"><span class="bigfont1" aria-label="element">Americium</span></li>
+             <li data-weight="243"><span class="bigfont1" aria-label="standard atomic weight ( 243 )">(243)</span></li>
+             <li data-groundstate="americium"><span class="bigfont1" aria-label="ground [Rn]5f 7s2">[Rn]5f<sup>7</sup>7s<sup>2</sup></span></li>
+             <li data-ev="5.9738"><span class="bigfont1" aria-label="ionization energy 5 . 9 7 3 8">5.9738</span></li> 
+          </ul>
+      </td>
       <td id="curium" class="artificial" tabindex="0">
             <ul>
              <li data-atomicnumber="96"><span class="bigfont1" aria-label="atomic number 96">96</span></li>
@@ -1258,20 +1321,20 @@
              <li data-groundstate="lawrencium"><span class="bigfont1" aria-label="ground [Rn]5f14 7s2 7p">[Rn]5f<sup>14</sup>7s<sup>2</sup>7p</span></li>
              <li data-ev="4.96"><span class="bigfont1" aria-label="ionization energy 4 . 9 6">4.96</span></li> 
           </ul>
-      </td>
+       </td>
      </tr>
-
   </tbody>
-</table>
+    
+ </table>
 </div>
     
-  </main>
-  <footer>
+ </main>
+ <footer>
   <div class="left100">
      <p tabindex="0">This page last modified or reviewed</p>
         Content: 27 January 2020<br />
-        WebAim: 27 January 2020 Needs Repair<br />
-        NuHTML: 2 December 2019 multiple aria-label warnings (expected, in this case)<br />
+        WebAim: 27 January 2020 0<br />
+        NuHTML: 27 January 2020 multiple aria-label warnings (expected, in this case)<br />
         Note:aria-label used to over-ride screen reader mispronunciations of atomic weights<br />
         Note:aria-live role="region" added 3 Jan 2020 to display box for elements<br />
   </div>
