--- a/index.html
+++ b/index.html
@@ -1352,13 +1352,27 @@ var text;
         + "<br/>"
         + "<strong>" + "Hydrogen" + "</strong>"
         + "<br/>" 
-        + "Ground State: 2 S 1/2" + "<br/>"
+        + "Ground State: 1s" + "<br/>"
+        + "Atomic Number: 1"  + "<br/>"
+        + "Standard Atomic Weight: 1.008"  + "<br/>"
+        + "Ground State Configuration: 1s"  + "<br/>"
+        + "Ionization Energy: 13.5984"  + "<br/>"
+        + "<br/>";
+ // If the letter is "b" or "d"
+   } else if (letter === "HELIUM") {
+        text = "<br/>"
+        + "<br/>"
+        + "<strong>" + "Helium" + "</strong>"
+        + "<br/>" 
+        + "Ground State: 1s<sup>2</sup>" + "<br/>"
         + "Atomic Number: 1"  + "<br/>"
         + "Standard Atomic Weight: 1.008"  + "<br/>"
         + "Ground State Configuration: 1s"  + "<br/>"
         + "Ionization Energy: 13.5984"  + "<br/>"
         + "<br/>";
 
+   // If the letter is anything else
+      
    // If the letter is "b" or "d"
    } else if (letters === "b" || letters === "d") {
      text = "Close, but not close enough.";
