--- a/index.html
+++ b/index.html
@@ -1332,11 +1332,15 @@
  <footer>
   <div class="left100">
      <p tabindex="0">This page last modified or reviewed</p>
-        Content: 28 January 2020<br />
+        Content: 29 January 2020<br />
         WebAim: 27 January 2020 0<br />
         NuHTML: 27 January 2020 multiple aria-label warnings (expected, in this case)<br />
         Note:aria-label used to over-ride screen reader mispronunciations of atomic weights<br />
         Note:aria-live role="region" added 3 Jan 2020 to display box for elements<br />
+        ToDo: Fix CU and Ni (28 and 29)<br />
+        ToDo: Create button for only Atomic # and Atomic Weight<br />
+        ToDo: Set up search for two-letter Atomic Symbol<br />
+        ToDo: Bring down headers into cells<br />
   </div>
 </footer>
   <!-- https://stackoverflow.com/questions/9127498/how-to-perform-a-real-time-search-and-filter-on-a-html-table -->
