--- a/index.html
+++ b/index.html
@@ -390,7 +390,7 @@
              <li data-symbol="co" aria-label="atomic symbol C o" class="bigfont2">C<span class="letter-tight">o</span></li>
              <li data-element="cobalt"><span class="bigfont1" aria-label="element">Cobalt</span></li>
              <li data-weight="58.933"><span class="bigfont1" aria-label="standard atomic weight 58 . 9 3 3">58.933</span></li>
-             <li data-groundstate="cobalt"><span class="bigfont1" aria-label="ground TBD">TBD</span></li>
+             <li data-groundstate="cobalt"><span class="bigfont1" aria-label="ground [Ar]3d 7 4s 2">[Ar]3d<sup>7</sup>4s<sup>2</sup></span></li>
              <li data-ev="7.8810"><span class="bigfont1" aria-label="ionization energy 7 . 8 8 1 0">7.8810</span></li> 
           </ul>
       </td>
