--- a/index_backup1.html
+++ b/index_backup1.html
@@ -390,18 +390,18 @@
              <li data-symbol="co" aria-label="atomic symbol C o" class="bigfont2">C<span class="letter-tight">o</span></li>
              <li data-element="cobalt"><span class="bigfont1" aria-label="element">Cobalt</span></li>
              <li data-weight="58.933"><span class="bigfont1" aria-label="standard atomic weight 58 . 9 3 3">58.933</span></li>
-             <li data-groundstate="cobalt"><span class="bigfont1" aria-label="ground TBD">TBD</span></li>
+             <li data-groundstate="cobalt"><span class="bigfont1" aria-label="ground [Ar]3d 7 4s 2">[Ar]3d<sup>7</sup>4s<sup>2</sup></span></li>
              <li data-ev="7.8810"><span class="bigfont1" aria-label="ionization energy 7 . 8 8 1 0">7.8810</span></li> 
           </ul>
       </td>
       <td id="nickel" class="solids" tabindex="0">
            <ul>
              <li data-atomicnumber="28"><span class="bigfont1" aria-label="atomic number 28">28</span></li>
-             <li data-symbol="cu" aria-label="atomic symbol N i" class="bigfont2">N<span class="letter-tight">i</span></li>
-             <li data-element="copper"><span class="bigfont1" aria-label="element">Copper</span></li>
-             <li data-weight="63.546"><span class="bigfont1" aria-label="standard atomic weight 63 . 5 4 6">63.546</span></li>
-             <li data-groundstate="copper"><span class="bigfont1" aria-label="ground TBD">TBD</span></li>
-             <li data-ev="7.7264"><span class="bigfont1" aria-label="ionization energy 7 . 7 2 6 4">7.7264</span></li> 
+             <li data-symbol="ni" aria-label="atomic symbol N i" class="bigfont2">N<span class="letter-tight">i</span></li>
+             <li data-element="nickel"><span class="bigfont1" aria-label="element">Nickel</span></li>
+             <li data-weight="58 . 6 9 3"><span class="bigfont1" aria-label="standard atomic weight 58 . 6 9 3">58.693</span></li>
+             <li data-groundstate="nickel"><span class="bigfont1" aria-label="ground Ar]3d 8 4s 2">Ar]3d<sup>8</sup>4s<sup>2</sup></span></li>
+             <li data-ev="7 . 6 3 9 9"><span class="bigfont1" aria-label="ionization energy 7 . 6 3 9 9">7.6399</span></li> 
           </ul>
       </td>
       <td id="copper" class="solids" tabindex="0">
