--- a/index.html
+++ b/index.html
@@ -1351,7 +1351,7 @@ var letters = document.getElementById("search_field_input").value;
 var letter = letters.toUpperCase();
 var text;
 
-   // If the letter is "c"
+   // If the letter is "hydrogen"
    if (letter === "HYDROGEN") {
      text = "<br/>"
         + "<br/>"
@@ -1363,18 +1363,31 @@ var text;
         + "Ground State Configuration: 1s"  + "<br/>"
         + "Ionization Energy: 13.5984"  + "<br/>"
         + "<br/>";
- // If the letter is "b" or "d"
+ // If the letter is "helium"
    } else if (letter === "HELIUM") {
         text = "<br/>"
         + "<br/>"
         + "<strong>" + "Helium" + "</strong>"
         + "<br/>" 
         + "Ground State: 1s<sup>2</sup>" + "<br/>"
-        + "Atomic Number: 1"  + "<br/>"
-        + "Standard Atomic Weight: 1.008"  + "<br/>"
-        + "Ground State Configuration: 1s"  + "<br/>"
-        + "Ionization Energy: 13.5984"  + "<br/>"
+        + "Atomic Number: 2"  + "<br/>"
+        + "Standard Atomic Weight: 4.0026"  + "<br/>"
+        + "Ground State Configuration: 1s<sup>2</sup>"  + "<br/>"
+        + "Ionization Energy: 24.5874"  + "<br/>"
         + "<br/>";
+    // If the letter is "helium"
+   } else if (letter === "HELIUM") {
+        text = "<br/>"
+        + "<br/>"
+        + "<strong>" + "Helium" + "</strong>"
+        + "<br/>" 
+        + "Ground State: 1s<sup>2</sup>" + "<br/>"
+        + "Atomic Number: 2"  + "<br/>"
+        + "Standard Atomic Weight: 4.0026"  + "<br/>"
+        + "Ground State Configuration: 1s<sup>2</sup>"  + "<br/>"
+        + "Ionization Energy: 24.5874"  + "<br/>"
+        + "<br/>";
+   
 
    // If the letter is anything else
       
