--- a/index.html
+++ b/index.html
@@ -1375,8 +1375,8 @@ var text;
         + "Ground State Configuration: 1s<sup>2</sup>"  + "<br/>"
         + "Ionization Energy: 24.5874"  + "<br/>"
         + "<br/>";
-    // If the letter is "helium"
-   } else if (letter === "HELIUM") {
+    // If the letter is "lithium"
+   } else if (letter === "LITHIUM") {
         text = "<br/>"
         + "<br/>"
         + "<strong>" + "Helium" + "</strong>"
