--- a/index_backup2.html
+++ b/index_backup2.html
@@ -390,7 +390,7 @@
              <li data-symbol="co" aria-label="atomic symbol C o" class="bigfont2">C<span class="letter-tight">o</span></li>
              <li data-element="cobalt"><span class="bigfont1" aria-label="element">Cobalt</span></li>
              <li data-weight="58.933"><span class="bigfont1" aria-label="standard atomic weight 58 . 9 3 3">58.933</span></li>
-             <li data-groundstate="cobalt"><span class="bigfont1" aria-label="ground TBD">TBD</span></li>
+             <li data-groundstate="cobalt"><span class="bigfont1" aria-label="ground [Ar]3d 7 4s 2">[Ar]3d<sup>7</sup>4s<sup>2</sup></span></li>
              <li data-ev="7.8810"><span class="bigfont1" aria-label="ionization energy 7 . 8 8 1 0">7.8810</span></li> 
           </ul>
       </td>
@@ -1351,7 +1351,7 @@ var letters = document.getElementById("search_field_input").value;
 var letter = letters.toUpperCase();
 var text;
 
-   // If the letter is "c"
+   // If the letter is "hydrogen"
    if (letter === "HYDROGEN") {
      text = "<br/>"
         + "<br/>"
@@ -1363,18 +1363,31 @@ var text;
         + "Ground State Configuration: 1s"  + "<br/>"
         + "Ionization Energy: 13.5984"  + "<br/>"
         + "<br/>";
- // If the letter is "b" or "d"
+ // If the letter is "helium"
    } else if (letter === "HELIUM") {
         text = "<br/>"
         + "<br/>"
         + "<strong>" + "Helium" + "</strong>"
         + "<br/>" 
         + "Ground State: 1s<sup>2</sup>" + "<br/>"
-        + "Atomic Number: 1"  + "<br/>"
-        + "Standard Atomic Weight: 1.008"  + "<br/>"
-        + "Ground State Configuration: 1s"  + "<br/>"
-        + "Ionization Energy: 13.5984"  + "<br/>"
+        + "Atomic Number: 2"  + "<br/>"
+        + "Standard Atomic Weight: 4.0026"  + "<br/>"
+        + "Ground State Configuration: 1s<sup>2</sup>"  + "<br/>"
+        + "Ionization Energy: 24.5874"  + "<br/>"
         + "<br/>";
+    // If the letter is "lithium"
+   } else if (letter === "LITHIUM") {
+        text = "<br/>"
+        + "<br/>"
+        + "<strong>" + "Helium" + "</strong>"
+        + "<br/>" 
+        + "Ground State: 1s<sup>2</sup>" + "<br/>"
+        + "Atomic Number: 2"  + "<br/>"
+        + "Standard Atomic Weight: 4.0026"  + "<br/>"
+        + "Ground State Configuration: 1s<sup>2</sup>"  + "<br/>"
+        + "Ionization Energy: 24.5874"  + "<br/>"
+        + "<br/>";
+   
 
    // If the letter is anything else
       
