--- a/index.html
+++ b/index.html
@@ -62,11 +62,11 @@
     <tr>
       <th class="opacityzero">Group IA</th>
       <th class="opacityzero">Group IIA</th>
-      <th class="opacityzero">Header 3</th>
-      <th class="opacityzero">Header 4</th>
-      <th class="opacityzero">Header 5</th>
-      <th class="opacityzero">Header 6</th>
-      <th class="opacityzero">Header 7</th>
+      <th class="opacityzero">Group IIIB</th>
+      <th class="opacityzero">Group IVB</th>
+      <th class="opacityzero">Header Group VB</th>
+      <th class="opacityzero">Group VIB</th>
+      <th class="opacityzero">Group VIIB</th>
       <th class="opacityzero">Header 8</th>
       <th class="opacityzero">Header 9</th>
       <th class="opacityzero">Header 10</th>
