--- a/index_backup2.html
+++ b/index_backup2.html
@@ -60,24 +60,24 @@
 <table id="table_id">
   <thead>
     <tr>
-      <th>Group IA</th>
-      <th>Group IIA</th>
-      <th>Header 3</th>
-      <th>Header 4</th>
-      <th>Header 5</th>
-      <th>Header 6</th>
-      <th>Header 7</th>
-      <th>Header 8</th>
-      <th>Header 9</th>
-      <th>Header 10</th>
-      <th>Header 11</th>
-      <th>Header 12</th>
-      <th>III A</th>
-      <th>IV A</th>
-      <th>V A</th>
-      <th>VI A</th>
-      <th>VII A</th>
-      <th>VIII A</th>
+      <th class="opacityzero">Group IA</th>
+      <th class="opacityzero">Group IIA</th>
+      <th class="opacityzero">Group IIIB</th>
+      <th class="opacityzero">Group IVB</th>
+      <th class="opacityzero">Header Group VB</th>
+      <th class="opacityzero">Group VIB</th>
+      <th class="opacityzero">Group VIIB</th>
+      <th class="opacityzero">Header 8</th>
+      <th class="opacityzero">Header 9</th>
+      <th class="opacityzero">Header 10</th>
+      <th class="opacityzero">Header 11</th>
+      <th class="opacityzero">Header 12</th>
+      <th class="opacityzero">III A</th>
+      <th class="opacityzero">IV A</th>
+      <th class="opacityzero">V A</th>
+      <th class="opacityzero">VI A</th>
+      <th class="opacityzero">VII A</th>
+      <th class="opacityzero">VIII A</th>
     </tr>
   </thead>
   <tbody>
