--- a/index.html
+++ b/index.html
@@ -531,7 +531,7 @@
              <li data-symbol="N b" aria-label="atomic symbol N b" class="bigfont2">N<span class="letter-tight">b</span></li>
              <li data-element="niobium"><span class="bigfont1" aria-label="element">Niobium</span></li>
              <li data-weight="92.906"><span class="bigfont1" aria-label="standard atomic weight 92 . 9 0 6">92.906</span></li>
-             <li data-groundstate="niobium"><span class="bigfont1" aria-label="ground TBD">TBD</span></li>
+             <li data-groundstate="niobium"><span class="bigfont1" aria-label="ground [Kr]4d 4 5s">[Kr]4d<sup>4</sup>5s</span></li>
              <li data-ev="6.7589"><span class="bigfont1" aria-label="ionization energy 6 . 7 5 8 9">6.7589</span></li> 
           </ul>
        </td>
