--- a/index_backup1.html
+++ b/index_backup1.html
@@ -38,7 +38,6 @@
 }	
 </style>
  </head>
-
  <body>   
     
  <main>
@@ -60,24 +59,24 @@
 <table id="table_id">
   <thead>
     <tr>
-      <th>Group IA</th>
-      <th>Group IIA</th>
-      <th>Header 3</th>
-      <th>Header 4</th>
-      <th>Header 5</th>
-      <th>Header 6</th>
-      <th>Header 7</th>
-      <th>Header 8</th>
-      <th>Header 9</th>
-      <th>Header 10</th>
-      <th>Header 11</th>
-      <th>Header 12</th>
-      <th>III A</th>
-      <th>IV A</th>
-      <th>V A</th>
-      <th>VI A</th>
-      <th>VII A</th>
-      <th>VIII A</th>
+      <th class="opacityzero">Group IA</th>
+      <th class="opacityzero">Group IIA</th>
+      <th class="opacityzero">Group IIIB</th>
+      <th class="opacityzero">Group IVB</th>
+      <th class="opacityzero">Header Group VB</th>
+      <th class="opacityzero">Group VIB</th>
+      <th class="opacityzero">Group VIIB</th>
+      <th class="opacityzero">Header 8</th>
+      <th class="opacityzero">Header 9</th>
+      <th class="opacityzero">Header 10</th>
+      <th class="opacityzero">Header 11</th>
+      <th class="opacityzero">Header 12</th>
+      <th class="opacityzero">III A</th>
+      <th class="opacityzero">IV A</th>
+      <th class="opacityzero">V A</th>
+      <th class="opacityzero">VI A</th>
+      <th class="opacityzero">VII A</th>
+      <th class="opacityzero">VIII A</th>
     </tr>
   </thead>
   <tbody>
@@ -532,7 +531,7 @@
              <li data-symbol="N b" aria-label="atomic symbol N b" class="bigfont2">N<span class="letter-tight">b</span></li>
              <li data-element="niobium"><span class="bigfont1" aria-label="element">Niobium</span></li>
              <li data-weight="92.906"><span class="bigfont1" aria-label="standard atomic weight 92 . 9 0 6">92.906</span></li>
-             <li data-groundstate="niobium"><span class="bigfont1" aria-label="ground TBD">TBD</span></li>
+             <li data-groundstate="niobium"><span class="bigfont1" aria-label="ground [Kr]4d 4 5s">[Kr]4d<sup>4</sup>5s</span></li>
              <li data-ev="6.7589"><span class="bigfont1" aria-label="ionization energy 6 . 7 5 8 9">6.7589</span></li> 
           </ul>
        </td>
@@ -1351,7 +1350,7 @@ var letters = document.getElementById("search_field_input").value;
 var letter = letters.toUpperCase();
 var text;
 
-   // If the letter is "c"
+   // If the letter is "hydrogen"
    if (letter === "HYDROGEN") {
      text = "<br/>"
         + "<br/>"
@@ -1363,18 +1362,31 @@ var text;
         + "Ground State Configuration: 1s"  + "<br/>"
         + "Ionization Energy: 13.5984"  + "<br/>"
         + "<br/>";
- // If the letter is "b" or "d"
+ // If the letter is "helium"
    } else if (letter === "HELIUM") {
         text = "<br/>"
         + "<br/>"
         + "<strong>" + "Helium" + "</strong>"
         + "<br/>" 
         + "Ground State: 1s<sup>2</sup>" + "<br/>"
-        + "Atomic Number: 1"  + "<br/>"
-        + "Standard Atomic Weight: 1.008"  + "<br/>"
-        + "Ground State Configuration: 1s"  + "<br/>"
-        + "Ionization Energy: 13.5984"  + "<br/>"
+        + "Atomic Number: 2"  + "<br/>"
+        + "Standard Atomic Weight: 4.0026"  + "<br/>"
+        + "Ground State Configuration: 1s<sup>2</sup>"  + "<br/>"
+        + "Ionization Energy: 24.5874"  + "<br/>"
         + "<br/>";
+    // If the letter is "lithium"
+   } else if (letter === "LITHIUM") {
+        text = "<br/>"
+        + "<br/>"
+        + "<strong>" + "Helium" + "</strong>"
+        + "<br/>" 
+        + "Ground State: 1s<sup>2</sup>" + "<br/>"
+        + "Atomic Number: 2"  + "<br/>"
+        + "Standard Atomic Weight: 4.0026"  + "<br/>"
+        + "Ground State Configuration: 1s<sup>2</sup>"  + "<br/>"
+        + "Ionization Energy: 24.5874"  + "<br/>"
+        + "<br/>";
+   
 
    // If the letter is anything else
       
