--- a/index.html
+++ b/index.html
@@ -1378,15 +1378,26 @@ var text;
    } else if (letter === "LITHIUM") {
         text = "<br/>"
         + "<br/>"
-        + "<strong>" + "Helium" + "</strong>"
+        + "<strong>" + "Lithium" + "</strong>"
         + "<br/>" 
         + "Ground State: 1s<sup>2</sup>" + "<br/>"
-        + "Atomic Number: 2"  + "<br/>"
-        + "Standard Atomic Weight: 4.0026"  + "<br/>"
-        + "Ground State Configuration: 1s<sup>2</sup>"  + "<br/>"
-        + "Ionization Energy: 24.5874"  + "<br/>"
+        + "Atomic Number: 3"  + "<br/>"
+        + "Standard Atomic Weight:  6.94"  + "<br/>"
+        + "Ground State Configuration: 1s<sup>2</sup> 2s"  + "<br/>"
+        + "Ionization Energy: 5.3917"  + "<br/>"
         + "<br/>";
-   
+       // If the letter is "Beryllium"
+   } else if (letter === "BERYLLIUM") {
+        text = "<br/>"
+        + "<br/>"
+        + "<strong>" + "Beryllium" + "</strong>"
+        + "<br/>" 
+        + "Ground State: 1s<sup>2</sup>" + "<br/>"
+        + "Atomic Number: 3"  + "<br/>"
+        + "Standard Atomic Weight:  6.94"  + "<br/>"
+        + "Ground State Configuration: 1s<sup>2</sup> 2s"  + "<br/>"
+        + "Ionization Energy: 5.3917"  + "<br/>"
+        + "<br/>";
 
    // If the letter is anything else
       
