--- a/index_backup2.html
+++ b/index_backup2.html
@@ -38,7 +38,6 @@
 }	
 </style>
  </head>
-
  <body>   
     
  <main>
@@ -532,7 +531,7 @@
              <li data-symbol="N b" aria-label="atomic symbol N b" class="bigfont2">N<span class="letter-tight">b</span></li>
              <li data-element="niobium"><span class="bigfont1" aria-label="element">Niobium</span></li>
              <li data-weight="92.906"><span class="bigfont1" aria-label="standard atomic weight 92 . 9 0 6">92.906</span></li>
-             <li data-groundstate="niobium"><span class="bigfont1" aria-label="ground TBD">TBD</span></li>
+             <li data-groundstate="niobium"><span class="bigfont1" aria-label="ground [Kr]4d 4 5s">[Kr]4d<sup>4</sup>5s</span></li>
              <li data-ev="6.7589"><span class="bigfont1" aria-label="ionization energy 6 . 7 5 8 9">6.7589</span></li> 
           </ul>
        </td>
@@ -1379,15 +1378,26 @@ var text;
    } else if (letter === "LITHIUM") {
         text = "<br/>"
         + "<br/>"
-        + "<strong>" + "Helium" + "</strong>"
+        + "<strong>" + "Lithium" + "</strong>"
         + "<br/>" 
         + "Ground State: 1s<sup>2</sup>" + "<br/>"
-        + "Atomic Number: 2"  + "<br/>"
-        + "Standard Atomic Weight: 4.0026"  + "<br/>"
-        + "Ground State Configuration: 1s<sup>2</sup>"  + "<br/>"
-        + "Ionization Energy: 24.5874"  + "<br/>"
+        + "Atomic Number: 3"  + "<br/>"
+        + "Standard Atomic Weight:  6.94"  + "<br/>"
+        + "Ground State Configuration: 1s<sup>2</sup> 2s"  + "<br/>"
+        + "Ionization Energy: 5.3917"  + "<br/>"
         + "<br/>";
-   
+       // If the letter is "Beryllium"
+   } else if (letter === "BERYLLIUM") {
+        text = "<br/>"
+        + "<br/>"
+        + "<strong>" + "Beryllium" + "</strong>"
+        + "<br/>" 
+        + "Ground State: 1s<sup>2</sup>" + "<br/>"
+        + "Atomic Number: 3"  + "<br/>"
+        + "Standard Atomic Weight:  6.94"  + "<br/>"
+        + "Ground State Configuration: 1s<sup>2</sup> 2s"  + "<br/>"
+        + "Ionization Energy: 5.3917"  + "<br/>"
+        + "<br/>";
 
    // If the letter is anything else
       
