--- a/index.html
+++ b/index.html
@@ -379,7 +379,7 @@
              <li data-symbol="fe" aria-label="atomic symbol F e" class="bigfont2">F<span class="letter-tight">e</span></li>
              <li data-element="iron"><span class="bigfont1" aria-label="element">Iron</span></li>
              <li data-weight="55.845"><span class="bigfont1" aria-label="standard atomic weight 55 . 8 4 5">55.845</span></li>
-             <li data-groundstate="iron"><span class="bigfont1" aria-label="ground TBD">TBD</span></li>
+             <li data-groundstate="iron"><span class="bigfont1" aria-label="ground [Ar]3d64s2">[Ar]3d<sup>6</sup>4s<sup>2</sup></span></li>
              <li data-ev="7 . 9 0 2 5"><span class="bigfont1" aria-label="ionization energy 7 . 9 0 2 5">7.9025</span></li> 
           </ul>
       </td>
