--- a/index_backup1.html
+++ b/index_backup1.html
@@ -379,7 +379,7 @@
              <li data-symbol="fe" aria-label="atomic symbol F e" class="bigfont2">F<span class="letter-tight">e</span></li>
              <li data-element="iron"><span class="bigfont1" aria-label="element">Iron</span></li>
              <li data-weight="55.845"><span class="bigfont1" aria-label="standard atomic weight 55 . 8 4 5">55.845</span></li>
-             <li data-groundstate="iron"><span class="bigfont1" aria-label="ground TBD">TBD</span></li>
+             <li data-groundstate="iron"><span class="bigfont1" aria-label="ground [Ar]3d64s2">[Ar]3d<sup>6</sup>4s<sup>2</sup></span></li>
              <li data-ev="7 . 9 0 2 5"><span class="bigfont1" aria-label="ionization energy 7 . 9 0 2 5">7.9025</span></li> 
           </ul>
       </td>
@@ -1378,15 +1378,26 @@ var text;
    } else if (letter === "LITHIUM") {
         text = "<br/>"
         + "<br/>"
-        + "<strong>" + "Helium" + "</strong>"
+        + "<strong>" + "Lithium" + "</strong>"
         + "<br/>" 
         + "Ground State: 1s<sup>2</sup>" + "<br/>"
-        + "Atomic Number: 2"  + "<br/>"
-        + "Standard Atomic Weight: 4.0026"  + "<br/>"
-        + "Ground State Configuration: 1s<sup>2</sup>"  + "<br/>"
-        + "Ionization Energy: 24.5874"  + "<br/>"
+        + "Atomic Number: 3"  + "<br/>"
+        + "Standard Atomic Weight:  6.94"  + "<br/>"
+        + "Ground State Configuration: 1s<sup>2</sup> 2s"  + "<br/>"
+        + "Ionization Energy: 5.3917"  + "<br/>"
         + "<br/>";
-   
+       // If the letter is "Beryllium"
+   } else if (letter === "BERYLLIUM") {
+        text = "<br/>"
+        + "<br/>"
+        + "<strong>" + "Beryllium" + "</strong>"
+        + "<br/>" 
+        + "Ground State: 1s<sup>2</sup>" + "<br/>"
+        + "Atomic Number: 3"  + "<br/>"
+        + "Standard Atomic Weight:  6.94"  + "<br/>"
+        + "Ground State Configuration: 1s<sup>2</sup> 2s"  + "<br/>"
+        + "Ionization Energy: 5.3917"  + "<br/>"
+        + "<br/>";
 
    // If the letter is anything else
       
