--- a/index_backup1.html
+++ b/index_backup1.html
@@ -369,7 +369,7 @@
              <li data-symbol="mn" aria-label="atomic symbol M n" class="bigfont2">M<span class="letter-tight">n</span></li>
              <li data-element="manganese"><span class="bigfont1" aria-label="element">Manganese</span></li>
              <li data-weight="54.938"><span class="bigfont1" aria-label="standard atomic weight 54 . 9 3 8">54.938</span></li>
-             <li data-groundstate="manganese"><span class="bigfont1" aria-label="ground TBD">TBD</span></li>
+             <li data-groundstate="manganese"><span class="bigfont1" aria-label="ground [Ar]3d 5 4s 2">[Ar]3d<sup>5</sup>4s<sup>2</sup></span></li>
              <li data-ev="7 . 4 3 4 0"><span class="bigfont1" aria-label="ionization energy 7 . 4 3 4 0">7 . 4 3 4 0</span></li> 
           </ul>
       </td>
