--- a/index.html
+++ b/index.html
@@ -370,7 +370,7 @@
              <li data-element="manganese"><span class="bigfont1" aria-label="element">Manganese</span></li>
              <li data-weight="54.938"><span class="bigfont1" aria-label="standard atomic weight 54 . 9 3 8">54.938</span></li>
              <li data-groundstate="manganese"><span class="bigfont1" aria-label="ground [Ar]3d 5 4s 2">[Ar]3d<sup>5</sup>4s<sup>2</sup></span></li>
-             <li data-ev="7 . 4 3 4 0"><span class="bigfont1" aria-label="ionization energy 7 . 4 3 4 0">7 . 4 3 4 0</span></li> 
+             <li data-ev="7 . 4 3 4 0"><span class="bigfont1" aria-label="ionization energy 7 . 4 3 4 0">7.4340</span></li> 
           </ul>
       </td>
          <td id="iron" class="solids" tabindex="0">
