--- a/index_backup2.html
+++ b/index_backup2.html
@@ -369,8 +369,8 @@
              <li data-symbol="mn" aria-label="atomic symbol M n" class="bigfont2">M<span class="letter-tight">n</span></li>
              <li data-element="manganese"><span class="bigfont1" aria-label="element">Manganese</span></li>
              <li data-weight="54.938"><span class="bigfont1" aria-label="standard atomic weight 54 . 9 3 8">54.938</span></li>
-             <li data-groundstate="manganese"><span class="bigfont1" aria-label="ground TBD">TBD</span></li>
-             <li data-ev="7 . 4 3 4 0"><span class="bigfont1" aria-label="ionization energy 7 . 4 3 4 0">7 . 4 3 4 0</span></li> 
+             <li data-groundstate="manganese"><span class="bigfont1" aria-label="ground [Ar]3d 5 4s 2">[Ar]3d<sup>5</sup>4s<sup>2</sup></span></li>
+             <li data-ev="7 . 4 3 4 0"><span class="bigfont1" aria-label="ionization energy 7 . 4 3 4 0">7.4340</span></li> 
           </ul>
       </td>
          <td id="iron" class="solids" tabindex="0">
@@ -379,7 +379,7 @@
              <li data-symbol="fe" aria-label="atomic symbol F e" class="bigfont2">F<span class="letter-tight">e</span></li>
              <li data-element="iron"><span class="bigfont1" aria-label="element">Iron</span></li>
              <li data-weight="55.845"><span class="bigfont1" aria-label="standard atomic weight 55 . 8 4 5">55.845</span></li>
-             <li data-groundstate="iron"><span class="bigfont1" aria-label="ground TBD">TBD</span></li>
+             <li data-groundstate="iron"><span class="bigfont1" aria-label="ground [Ar]3d64s2">[Ar]3d<sup>6</sup>4s<sup>2</sup></span></li>
              <li data-ev="7 . 9 0 2 5"><span class="bigfont1" aria-label="ionization energy 7 . 9 0 2 5">7.9025</span></li> 
           </ul>
       </td>
@@ -1331,7 +1331,7 @@
  <footer>
   <div class="left100">
      <p tabindex="0">This page last modified or reviewed</p>
-        Content: 5 February 2020<br />
+        Content: 6 February 2020<br />
         WebAim: 27 January 2020 0<br />
         NuHTML: 27 January 2020 multiple aria-label warnings (expected, in this case)<br />
         Note:aria-label used to over-ride screen reader mispronunciations of atomic weights<br />
