--- a/index.html
+++ b/index.html
@@ -359,7 +359,7 @@
              <li data-symbol="cr" aria-label="atomic symbol C r" class="bigfont2">C<span class="letter-tight">r</span></li>
              <li data-element="chromium"><span class="bigfont1" aria-label="element">Chromium</span></li>
              <li data-weight="51.996"><span class="bigfont1" aria-label="standard atomic weight 51 . 9 9 6">51.996</span></li>
-             <li data-groundstate="chromium"><span class="bigfont1" aria-label="ground TBD">TBD</span></li>
+             <li data-groundstate="chromium"><span class="bigfont1" aria-label="ground [Ar]3d 5 4s">[Ar]3d<sup>5</sup>4s</span></li>
              <li data-ev="6.7665"><span class="bigfont1" aria-label="ionization energy 6 . 7 6 6 5">6.7665</span></li> 
           </ul>
       </td>
