--- a/index_backup1.html
+++ b/index_backup1.html
@@ -40,7 +40,7 @@
  </head>
  <body>   
     
- <main>
+<main>
 <div class="left100 bottom50">
 <h1>Searchable Periodic Table</h1>
 <p tabindex="0">The elements are set up in a table, one element per cell. Each table cell contains the name of the element, and a list of five items containing the atomic number, the atomic symbol, the atomic weight, the ground state configuration, and the ionization energy.</p>
@@ -359,7 +359,7 @@
              <li data-symbol="cr" aria-label="atomic symbol C r" class="bigfont2">C<span class="letter-tight">r</span></li>
              <li data-element="chromium"><span class="bigfont1" aria-label="element">Chromium</span></li>
              <li data-weight="51.996"><span class="bigfont1" aria-label="standard atomic weight 51 . 9 9 6">51.996</span></li>
-             <li data-groundstate="chromium"><span class="bigfont1" aria-label="ground TBD">TBD</span></li>
+             <li data-groundstate="chromium"><span class="bigfont1" aria-label="ground [Ar]3d 5 4s">[Ar]3d<sup>5</sup>4s</span></li>
              <li data-ev="6.7665"><span class="bigfont1" aria-label="ionization energy 6 . 7 6 6 5">6.7665</span></li> 
           </ul>
       </td>
@@ -370,7 +370,7 @@
              <li data-element="manganese"><span class="bigfont1" aria-label="element">Manganese</span></li>
              <li data-weight="54.938"><span class="bigfont1" aria-label="standard atomic weight 54 . 9 3 8">54.938</span></li>
              <li data-groundstate="manganese"><span class="bigfont1" aria-label="ground [Ar]3d 5 4s 2">[Ar]3d<sup>5</sup>4s<sup>2</sup></span></li>
-             <li data-ev="7 . 4 3 4 0"><span class="bigfont1" aria-label="ionization energy 7 . 4 3 4 0">7 . 4 3 4 0</span></li> 
+             <li data-ev="7 . 4 3 4 0"><span class="bigfont1" aria-label="ionization energy 7 . 4 3 4 0">7.4340</span></li> 
           </ul>
       </td>
          <td id="iron" class="solids" tabindex="0">
