--- a/index.html
+++ b/index.html
@@ -349,7 +349,7 @@
              <li data-symbol="v" aria-label="atomic symbol V" class="bigfont2">V<span class="letter-tight">&nbsp;</span></li>
              <li data-element="vanadium"><span class="bigfont1" aria-label="element">Vanadium</span></li>
              <li data-weight="50.942"><span class="bigfont1" aria-label="standard atomic weight 50 . 9 4 2">50.942</span></li>
-             <li data-groundstate="vanadium"><span class="bigfont1" aria-label="ground TBD">TBD</span></li>
+             <li data-groundstate="vanadium"><span class="bigfont1" aria-label="ground [Ar]3d 3 4s 2">[Ar]3d<sup>3</sup>4s<sup>2</sup></span></li>
              <li data-ev="6.7462"><span class="bigfont1" aria-label="ionization energy 6 . 7 4 6 2">6.7462</span></li> 
           </ul>
       </td>
