--- a/index_backup2.html
+++ b/index_backup2.html
@@ -40,7 +40,7 @@
  </head>
  <body>   
     
- <main>
+<main>
 <div class="left100 bottom50">
 <h1>Searchable Periodic Table</h1>
 <p tabindex="0">The elements are set up in a table, one element per cell. Each table cell contains the name of the element, and a list of five items containing the atomic number, the atomic symbol, the atomic weight, the ground state configuration, and the ionization energy.</p>
@@ -349,7 +349,7 @@
              <li data-symbol="v" aria-label="atomic symbol V" class="bigfont2">V<span class="letter-tight">&nbsp;</span></li>
              <li data-element="vanadium"><span class="bigfont1" aria-label="element">Vanadium</span></li>
              <li data-weight="50.942"><span class="bigfont1" aria-label="standard atomic weight 50 . 9 4 2">50.942</span></li>
-             <li data-groundstate="vanadium"><span class="bigfont1" aria-label="ground TBD">TBD</span></li>
+             <li data-groundstate="vanadium"><span class="bigfont1" aria-label="ground [Ar]3d 3 4s 2">[Ar]3d<sup>3</sup>4s<sup>2</sup></span></li>
              <li data-ev="6.7462"><span class="bigfont1" aria-label="ionization energy 6 . 7 4 6 2">6.7462</span></li> 
           </ul>
       </td>
@@ -359,7 +359,7 @@
              <li data-symbol="cr" aria-label="atomic symbol C r" class="bigfont2">C<span class="letter-tight">r</span></li>
              <li data-element="chromium"><span class="bigfont1" aria-label="element">Chromium</span></li>
              <li data-weight="51.996"><span class="bigfont1" aria-label="standard atomic weight 51 . 9 9 6">51.996</span></li>
-             <li data-groundstate="chromium"><span class="bigfont1" aria-label="ground TBD">TBD</span></li>
+             <li data-groundstate="chromium"><span class="bigfont1" aria-label="ground [Ar]3d 5 4s">[Ar]3d<sup>5</sup>4s</span></li>
              <li data-ev="6.7665"><span class="bigfont1" aria-label="ionization energy 6 . 7 6 6 5">6.7665</span></li> 
           </ul>
       </td>
