--- a/index_backup2.html
+++ b/index_backup2.html
@@ -339,7 +339,7 @@
              <li data-symbol="ti" aria-label="atomic symbol T i" class="bigfont2">T<span class="letter-tight">i</span></li>
              <li data-element="titanium"><span class="bigfont1" aria-label="element">Titanium</span></li>
              <li data-weight="47.867"><span class="bigfont1" aria-label="standard atomic weight 47 . 8 6 7">47.867</span></li>
-             <li data-groundstate="titanium"><span class="bigfont1" aria-label="ground TBD">TBD</span></li>
+             <li data-groundstate="titanium"><span class="bigfont1" aria-label="ground [Ar]3d 2 4s 2">[Ar]3d<sup>2</sup>4s<sup>2</sup></span></li>
              <li data-ev="6.8281"><span class="bigfont1" aria-label="ionization energy 6 . 8 2 8 1">6.8281</span></li> 
           </ul>
       </td>
