--- a/index.html
+++ b/index.html
@@ -1392,11 +1392,11 @@ var text;
         + "<br/>"
         + "<strong>" + "Beryllium" + "</strong>"
         + "<br/>" 
-        + "Ground State: 1s<sup>2</sup>" + "<br/>"
-        + "Atomic Number: 3"  + "<br/>"
-        + "Standard Atomic Weight:  6.94"  + "<br/>"
+        + "Ground State: 1s<sup>2</sup>  2s<sup>2</sup>" + "<br/>"
+        + "Atomic Number: 4"  + "<br/>"
+        + "Standard Atomic Weight: 9.0122"  + "<br/>"
         + "Ground State Configuration: 1s<sup>2</sup> 2s"  + "<br/>"
-        + "Ionization Energy: 5.3917"  + "<br/>"
+        + "Ionization Energy: 9.32277"  + "<br/>"
         + "<br/>";
 
    // If the letter is anything else
