--- a/index.html
+++ b/index.html
@@ -1398,6 +1398,19 @@ var text;
         + "Ground State Configuration: 1s<sup>2</sup> 2s"  + "<br/>"
         + "Ionization Energy: 9.32277"  + "<br/>"
         + "<br/>";
+             // If the letter is "Beryllium"
+   } else if (letter === "BORON") {
+        text = "<br/>"
+        + "<br/>"
+        + "<strong>" + "Beryllium" + "</strong>"
+        + "<br/>" 
+        + "Ground State: 1s<sup>2</sup>  2s<sup>2</sup>" + "<br/>"
+        + "Atomic Number: 4"  + "<br/>"
+        + "Standard Atomic Weight: 9.0122"  + "<br/>"
+        + "Ground State Configuration: 1s<sup>2</sup> 2s"  + "<br/>"
+        + "Ionization Energy: 9.32277"  + "<br/>"
+        + "<br/>";
+
 
    // If the letter is anything else
       
