--- a/index.html
+++ b/index.html
@@ -329,7 +329,7 @@
              <li data-symbol="sc" aria-label="atomic symbol S c" class="bigfont2">S<span class="letter-tight">c</span></li>
              <li data-element="scandium"><span class="bigfont1" aria-label="element">Scandium</span></li>
              <li data-weight="44.956"><span class="bigfont1" aria-label="standard atomic weight 44 . 9 5 6">44.956</span></li>
-             <li data-groundstate="scandium"><span class="bigfont1" aria-label="ground TBD">TBD</span></li>
+             <li data-groundstate="scandium"><span class="bigfont1" aria-label="ground [Ar]3d 4s 2">[Ar]3d 4s<sup>2</sup></span></li>
              <li data-ev="6.5615"><span class="bigfont1" aria-label="ionization energy 6 . 5 6 1 5">6.5615</span></li> 
           </ul>
       </td>       
