--- a/index.html
+++ b/index.html
@@ -319,7 +319,7 @@
              <li data-symbol="ca" aria-label="atomic symbol C a" class="bigfont2">C<span class="letter-tight">a</span></li>
              <li data-element="calcium"><span class="bigfont1" aria-label="element">Calcium</span></li>
              <li data-weight="40.078"><span class="bigfont1" aria-label="standard atomic weight 40 . 0 7 8">40.078</span></li>
-             <li data-groundstate="calcium"><span class="bigfont1" aria-label="ground TBD">TBD</span></li>
+             <li data-groundstate="calcium"><span class="bigfont1" aria-label="ground [Ar]4s 2">[Ar]4s<sup>2</sup></span></li>
              <li data-ev="6.1132"><span class="bigfont1" aria-label="ionization energy 6 . 1 1 3 2">6.1132</span></li> 
           </ul>
       </td>
