--- a/index.html
+++ b/index.html
@@ -1398,16 +1398,16 @@ var text;
         + "Ground State Configuration: 1s<sup>2</sup> 2s"  + "<br/>"
         + "Ionization Energy: 9.32277"  + "<br/>"
         + "<br/>";
-             // If the letter is "Beryllium"
+       // If the letter is "Boron"
    } else if (letter === "BORON") {
         text = "<br/>"
         + "<br/>"
-        + "<strong>" + "Beryllium" + "</strong>"
+        + "<strong>" + "Boron" + "</strong>"
         + "<br/>" 
         + "Ground State: 1s<sup>2</sup>  2s<sup>2</sup>" + "<br/>"
         + "Atomic Number: 5"  + "<br/>"
-        + "Standard Atomic Weight: 9.0122"  + "<br/>"
-        + "Ground State Configuration: 1s<sup>2</sup> 2s"  + "<br/>"
+        + "Standard Atomic Weight:  10.81"  + "<br/>"
+        + "Ground State Configuration: 1s<sup>2</sup>2s<sup>2</sup>2p"  + "<br/>"
         + "Ionization Energy: 8.2980"  + "<br/>"
         + "<br/>";
 
