--- a/index.html
+++ b/index.html
@@ -1410,7 +1410,17 @@ var text;
         + "Ground State Configuration: 1s<sup>2</sup>2s<sup>2</sup>2p"  + "<br/>"
         + "Ionization Energy: 8.2980"  + "<br/>"
         + "<br/>";
-
+   } else if (letter === "CARBON") {
+        text = "<br/>"
+        + "<br/>"
+        + "<strong>" + "Carbon" + "</strong>"
+        + "<br/>" 
+        + "Ground State: 1s<sup>2</sup>  2s<sup>2</sup>" + "<br/>"
+        + "Atomic Number: 6"  + "<br/>"
+        + "Standard Atomic Weight:  10.81"  + "<br/>"
+        + "Ground State Configuration: 1s<sup>2</sup>2s<sup>2</sup>2p<sup>2</sup>"  + "<br/>"
+        + "Ionization Energy: 11.2603"  + "<br/>"
+        + "<br/>";
 
    // If the letter is anything else
       
